[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["Shinichiro Saito <s-saito@chic.ocn.ne.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
jellyfish = "^0.9.0"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
